<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/lifecyclebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLifecycle" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.046"/>
    <Button
            android:text="@string/btnLiveData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLiveData" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.488" app:layout_constraintVertical_bias="0.197"/>
    <Button
            android:text="@string/btnDatabinding"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:id="@+id/btnDatabinding" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.488" app:layout_constraintVertical_bias="0.333"/>
    <Button
            android:text="@string/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnScoreBoard" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.451"/>
</androidx.constraintlayout.widget.ConstraintLayout>