<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
    <variable name="data" type="com.whw.aaclearn.scoreboard.MyViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".scoreboard.ScoreBoardActivity">

        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline6"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.6"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline9"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.75"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline10"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.9"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline8"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.45"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline7"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.3"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline2"
                                                    android:orientation="vertical"
                                                    app:layout_constraintGuide_percent="0.95"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline3"
                                                    android:orientation="vertical"
                                                    app:layout_constraintGuide_percent="0.5"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline11"
                                                    android:orientation="vertical"
                                                    app:layout_constraintGuide_percent="0.05352798"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline4"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.15"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline5"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.05"/>
        <TextView
                android:text="@string/tvA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline5" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline4"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline11"
                android:layout_marginStart="8dp" android:textSize="@dimen/teamTextSize"/>
        <TextView
                android:text="@string/tvB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline4" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline2"
                android:layout_marginEnd="8dp" android:textSize="@dimen/teamTextSize"/>
        <Button
                android:text="@string/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:onClick="@{()->data.aTeamAdd(1)}"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline11"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline7" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline8" android:background="@color/colorAccent"
                android:textColor="@android:color/white"/>
        <Button
                android:text="@string/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:onClick="@{()->data.aTeamAdd(2)}"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline11"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline8" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline6" android:background="@color/colorAccent"
                android:textColor="@android:color/white"/>
        <Button
                android:text="@string/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:onClick="@{()->data.aTeamAdd(3)}"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline9" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline6" app:layout_constraintEnd_toStartOf="@+id/guideline3"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline11"
                android:layout_marginStart="8dp" android:background="@color/colorAccent"
                android:textColor="@android:color/white"/>
        <Button
                android:text="@string/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button4"
                android:onClick="@{()->data.bTeamAdd(1)}"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline8" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline2"
                android:layout_marginEnd="8dp" android:textColor="@android:color/white"
                android:background="@color/colorPrimary"/>
        <Button
                android:text="@string/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button5"
                android:onClick="@{()->data.bTeamAdd(2)}"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline3"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline8" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline6" android:textColor="@android:color/white"
                android:background="@color/colorPrimary"/>
        <Button
                android:text="@string/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button6"
                android:onClick="@{()->data.bTeamAdd(3)}"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline9" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline2"
                android:layout_marginEnd="8dp" android:textColor="@android:color/white"
                android:background="@color/colorPrimary"/>
        <ImageView
                android:src="@drawable/ic_undo_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:onClick="@{()->data.undo()}"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline11"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline9" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline10" app:layout_constraintHorizontal_bias="0.8"
                android:contentDescription="@string/undo"/>
        <ImageView
                android:src="@drawable/ic_refresh_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->data.refresh()}"
                android:id="@+id/imageView3" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline10" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline9"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline2"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.2"
                android:contentDescription="@string/refresh"/>
        <TextView
                android:text="@{String.valueOf(data.ATeamScore)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline7" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline11"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline3"
                android:layout_marginEnd="8dp" android:textSize="@dimen/scoreTextSize"
                android:textColor="@color/colorAccent" tools:text="120"/>
        <TextView
                android:text="@{String.valueOf(data.BTeamScore)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline7" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline2"
                android:layout_marginEnd="8dp" android:textSize="@dimen/scoreTextSize"
                android:textColor="@color/colorPrimary" tools:text="55"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>